--- a/Farming.ipynb
+++ b/Farming.ipynb
@@ -6,6 +6,7 @@
       "name": "Farming.ipynb",
       "provenance": [],
       "collapsed_sections": [],
+      "machine_shape": "hm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,6 +35,7 @@
         "id": "-R20gA4E5C6E"
       },
       "source": [
+        "\n",
         "!nvidia-smi -L"
       ],
       "execution_count": null,
